content update on this and previous push

--- a/about.html
+++ b/about.html
@@ -132,7 +132,7 @@
                             </ul>
                         </div>
                         <div class="main-menu__right">
-                            <a href="contact.html" class="thm-btn main-slider__btn">Book Now</a>
+                            <a target="_blank" href="https://www.treatwell.co.uk/place/asuna-salon-1/" class="thm-btn main-slider__btn">Book Now</a>
                         </div>
                     </div>
                 </div>
@@ -477,8 +477,14 @@
     </div>
     <!-- /.search-popup -->
 
-    <a href="#" data-target="html" class="scroll-to-target scroll-to-top"><i class="fa fa-angle-up"></i></a>
-
+    <!-- <a href="#" data-target="html" class="scroll-to-target scroll-to-top"><i class="fa fa-angle-up"></i></a> -->
+<!-- WhatsApp Floating Button -->
+    <a href="https://wa.me/447931931966" 
+    class="whatsapp-float" 
+    target="_blank" 
+    aria-label="Chat on WhatsApp">
+    <img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/whatsapp.svg" alt="WhatsApp" /> 
+    </a>
 
     <script src="assets/vendors/jquery/jquery-3.6.0.min.js"></script>
     <script src="assets/vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
