--- a/beauty-treatments.html
+++ b/beauty-treatments.html
@@ -132,7 +132,7 @@
                             </ul>
                         </div>
                         <div class="main-menu__right">
-                            <a href="contact.html" class="thm-btn main-slider__btn">Book Now</a>
+                            <a target="_blank" href="https://www.treatwell.co.uk/place/asuna-salon-1/" class="thm-btn main-slider__btn">Book Now</a>
                         </div>
                     </div>
                 </div>
@@ -182,12 +182,12 @@
                             </div>
                             <div class="services-details-two__help-line">
                                 <div class="services-details-two__help-line-img">
-                                    <img src="assets/images/My-images/book.jpg" alt="">
+                                    <img src="assets/images/My-images/book-now.jpg" alt="">
                                 </div>
                                 <div class="services-details-two__help-line-content">
-                                    <div class="services-details-two__help-line-icon">
-                                        <span class="icon-telephone-call"></span>
-                                    </div>
+                                    <a href="https://wa.me/447931931966" target="_blank" class="services-details-two__help-line-icon">
+                                        <img style="width: 50%;" src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/whatsapp.svg" alt="WhatsApp" />
+                                    </a>
                                     <p class="services-details-two__help-line-sub-title">Book for You</p>
                                     <h3 class="services-details-two__help-number"><a target="_blank" href="https://wa.me/+447931931966">+44 7931 931966</a></h3>
                                 </div>
@@ -197,72 +197,89 @@
                     <div class="col-xl-8 col-lg-7">
                         <div class="services-details-two__right">
                             <div class="services-details-two__img">
-                                <img src="assets/images/My-images/beauty-1.jpg" alt="">
+                                <img src="assets/images/My-images/beauty-treatment.svg" alt="">
                             </div>
 
                             <!-- Main Title -->
                             <h3 class="services-details-two__title-1">Facials & Skin Treatments</h3>
                             <p class="services-details-two__text-1">
-                                At Asuna Salon, our expert facials go beyond relaxation—they deeply cleanse, exfoliate, and restore your skin’s natural glow. From blackhead extractions to anti-aging masks, each treatment is tailored to your skin’s unique needs in our calming home-based space.
+                                At Asuna Salon, our expert facials go beyond relaxation—they deeply cleanse, exfoliate, and restore your skin’s natural glow. From Crystal Clear Microdermabrasion to blackhead extractions and gentle, sensitive-skin formulas, each treatment is tailored to your skin’s unique needs in our calming home-based space.
                             </p>
                             <p class="services-details-two__text-2">
-                                We specialize in Crystal Clear Microdermabrasion and targeted facials that address acne, dullness, congestion, and more. Whether you want a quick glow-up or long-term skin care results, our treatments offer visible improvements and a true moment of self-care.
+                                We specialize in advanced techniques that tackle acne, congestion, and dullness while boosting hydration and firmness. Whether you’re preparing for a big event with our instant Mini Lift Mask or seeking long-term skin health, our treatments deliver visible results and a true moment of self-care.
                             </p>
-
-                            <!-- NEW SECTION: What is Microdermabrasion -->
-                            <h3 class="services-details-two__title-2">What is Crystal Clear Microdermabrasion?</h3>
-                            <p class="services-details-two__text-3">
-                                Crystal Clear Microdermabrasion is a professional exfoliation treatment using ultra-fine aluminium oxide crystals. It removes dead skin cells and impurities while stimulating new cell growth, leaving your skin visibly smoother, brighter, and more refined.
-                            </p>
-
-                            <!-- NEW SECTION: Targeting Blackheads & Acne -->
-                            <h3 class="services-details-two__title-2">Treating Blackheads & Acne</h3>
-                            <p class="services-details-two__text-3">
-                                Blackheads are clogged pores caused by excess oil and dead skin. Our targeted facials combine gentle extraction, active ingredients like salicylic acid, and hydrating masks to clear pores, reduce inflammation, and prevent breakouts—especially for oily or acne-prone skin.
-                            </p>
-
-                            <!-- NEW SECTION: Soothing Sensitive Skin -->
-                            <h3 class="services-details-two__title-2">Gentle Products for Sensitive Skin</h3>
-                            <p class="services-details-two__text-3">
-                                We use Crystal Clear products enriched with cucumber extract, Vitamin C & E, and glycerin—perfect for calming, hydrating, and protecting delicate or reactive skin types. Every treatment is tailored for your skin’s tolerance and comfort.
-                            </p>
-
-                            <!-- NEW SECTION: The Mini Lift Mask -->
-                            <h3 class="services-details-two__title-2">Mini Lift Mask: Instant Firming & Radiance</h3>
-                            <p class="services-details-two__text-3">
-                                Perfect before a big event or as a refreshing boost, the Mini Lift Mask delivers an instant tightening effect while boosting luminosity. It smooths fine lines, firms the skin, and enhances your natural glow in just one session.
-                            </p>
-
                             <!-- BENEFITS SECTION -->
                             <h3 class="services-details-two__title-2">Why Your Skin Loves Our Facials</h3>
                             <ul style="margin-bottom: 37px; margin-top: 26px;" class="services-details-two__points list-unstyled">
                                 <li>
                                     <div class="icon"><span class="fa fa-check"></span></div>
-                                    <div class="text"><p>Deep cleansing to unclog pores and remove impurities</p></div>
+                                    <div class="text"><p>Deep cleansing and Crystal Clear Microdermabrasion to unclog pores</p></div>
                                 </li>
                                 <li>
                                     <div class="icon"><span class="fa fa-check"></span></div>
-                                    <div class="text"><p>Targets acne, blackheads, and uneven texture</p></div>
+                                    <div class="text"><p>Targets acne, blackheads, and uneven skin texture</p></div>
                                 </li>
                                 <li>
                                     <div class="icon"><span class="fa fa-check"></span></div>
-                                    <div class="text"><p>Boosts hydration and skin elasticity</p></div>
+                                    <div class="text"><p>Boosts hydration, firmness, and overall skin elasticity</p></div>
                                 </li>
                                 <li>
                                     <div class="icon"><span class="fa fa-check"></span></div>
-                                    <div class="text"><p>Stimulates circulation for a radiant glow</p></div>
+                                    <div class="text"><p>Instant radiance with our tightening Mini Lift Mask</p></div>
                                 </li>
                                 <li>
                                     <div class="icon"><span class="fa fa-check"></span></div>
-                                    <div class="text"><p>Customized for all skin types, including sensitive skin</p></div>
+                                    <div class="text"><p>Gentle, customized care for all skin types, including sensitive</p></div>
                                 </li>
                             </ul>
-
                             <!-- FAQ Section -->
-                            <h3 class="services-details-two__title-2">Frequently Asked Questions</h3>
                             <div class="services-details-two__faq">
                                 <div class="accrodion-grp" data-grp-name="faq-one-accrodion">
-                                    <div class="accrodion active">
+                                    <!-- New FAQ Items -->
+                                    <div class="accrodion  active">
+                                        <div class="accrodion-title">
+                                            <h4>What is Crystal Clear Microdermabrasion?</h4>
+                                        </div>
+                                        <div class="accrodion-content">
+                                            <div class="inner">
+                                                <p>Crystal Clear Microdermabrasion is a professional exfoliation treatment using ultra-fine aluminium oxide crystals. It removes dead skin cells and impurities while stimulating new cell growth, leaving your skin visibly smoother, brighter, and more refined.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="accrodion">
+                                        <div class="accrodion-title">
+                                            <h4>How do you treat blackheads and acne?</h4>
+                                        </div>
+                                        <div class="accrodion-content">
+                                            <div class="inner">
+                                                <p>We combine gentle extraction, active ingredients like salicylic acid, and hydrating masks to clear pores, reduce inflammation, and prevent breakouts—especially for oily or acne-prone skin.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="accrodion">
+                                        <div class="accrodion-title">
+                                            <h4>Do you have options for sensitive skin?</h4>
+                                        </div>
+                                        <div class="accrodion-content">
+                                            <div class="inner">
+                                                <p>Yes! We use Crystal Clear products enriched with cucumber extract, Vitamin C &amp; E, and glycerin—perfect for calming, hydrating, and protecting delicate or reactive skin. Every treatment is tailored for your skin’s tolerance and comfort.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="accrodion">
+                                        <div class="accrodion-title">
+                                            <h4>What is the Mini Lift Mask?</h4>
+                                        </div>
+                                        <div class="accrodion-content">
+                                            <div class="inner">
+                                                <p>Our Mini Lift Mask delivers an instant tightening effect while boosting luminosity—perfect before a big event or as a refreshing boost. It smooths fine lines, firms the skin, and enhances your natural glow in just one session.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="accrodion">
                                         <div class="accrodion-title">
                                             <h4>What does a facial include?</h4>
                                         </div>
@@ -295,18 +312,10 @@
                                         </div>
                                     </div>
 
-                                    <div class="accrodion">
-                                        <div class="accrodion-title">
-                                            <h4>How often should I get a facial?</h4>
-                                        </div>
-                                        <div class="accrodion-content">
-                                            <div class="inner">
-                                                <p>We recommend every 4–6 weeks for best results. For specific concerns like acne or pigmentation, a consistent schedule speeds up results.</p>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    
                                 </div>
                             </div>
+
                             <div class="row">
                                 <div class="col-xl-10">
                                     <div class="services-two__btn-box">
@@ -454,8 +463,14 @@
     </div>
     <!-- /.search-popup -->
 
-    <a href="#" data-target="html" class="scroll-to-target scroll-to-top"><i class="fa fa-angle-up"></i></a>
-
+    <!-- <a href="#" data-target="html" class="scroll-to-target scroll-to-top"><i class="fa fa-angle-up"></i></a> -->
+<!-- WhatsApp Floating Button -->
+    <a href="https://wa.me/447931931966" 
+    class="whatsapp-float" 
+    target="_blank" 
+    aria-label="Chat on WhatsApp">
+    <img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/whatsapp.svg" alt="WhatsApp" /> 
+    </a>
 
     <script src="assets/vendors/jquery/jquery-3.6.0.min.js"></script>
     <script src="assets/vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
