--- a/gallery.html
+++ b/gallery.html
@@ -132,7 +132,7 @@
                             </ul>
                         </div>
                         <div class="main-menu__right">
-                            <a href="contact.html" class="thm-btn main-slider__btn">Book Now</a>
+                            <a target="_blank" href="https://www.treatwell.co.uk/place/asuna-salon-1/" class="thm-btn main-slider__btn">Book Now</a>
                         </div>
                     </div>
                 </div>
