--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                                             <!-- <img src="assets/images/My-images/nav-logo-white.svg" alt=""> -->
                                         </div>
                                         <p class="main-slider__sub-title">ideal place to unwind</p>
-                                        <h2 class="main-slider__title">Asuno Salon</h2>
+                                        <h2 class="main-slider__title">Asuna Salon</h2>
                                         <div class="main-slider__btn-box">
                                             <a href="hair-styling.html" class="thm-btn main-slider__btn">Discover more</a>
                                         </div>
@@ -198,7 +198,7 @@
 
                                         </div>
                                         <p class="main-slider__sub-title">ideal place to unwind</p>
-                                        <h2 class="main-slider__title">Asuno Salon</h2>
+                                        <h2 class="main-slider__title">Asuna Salon</h2>
                                         <div class="main-slider__btn-box">
                                             <a href="hair-styling.html" class="thm-btn main-slider__btn">Discover more</a>
                                         </div>
