--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,7 @@
             <span class="mobile-nav__close mobile-nav__toggler"><i class="fa fa-times"></i></span>
 
             <div class="logo-box">
-                <a href="#" aria-label="logo image"> Asuna Salon<img src="" width="90"
+                <a href="#" aria-label="logo image"><img src="assets/images/My-images/nav-logo.svg" width="90"
                         alt="" /></a>
             </div>
             <!-- /.logo-box -->
