--- a/contact.html
+++ b/contact.html
@@ -71,17 +71,10 @@
                     <div class="main-header__top-inner">
                         <div class="main-header__top-left">
                             <ul class="list-unstyled main-header__contact-list">
+                                
                                 <li>
                                     <div class="icon">
-                                        <i class="fas fa-envelope"></i>
-                                    </div>
-                                    <div class="text">
-                                        <p><a target="_blank" href="mailto:book@asunasalon.com">book@asunasalon.com</a></p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="icon">
-                                        <i class="fas fa-phone"></i>
+                                        <i class="fab fa-whatsapp"></i>
                                     </div>
                                     <div class="text">
                                         <p><a target="_blank" href="https://wa.me/+447931931966">+44 7931 931966</a></p>
@@ -307,8 +300,8 @@
                         <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="100ms">
                             <div class="footer-widget__column footer-widget__contact-box">
                                 <div class="footer-widget__contact">
-                                    <a target="_blank" href="mailto:book@asunasalon.com">book@asunasalon.com</a>
-                                    <a target="_blank" href="https://wa.me/+447931931966">+44 7931 931966</a>
+                                    <a target="_blank" href="https://wa.me/+447931931966">Feel free to reach out:</a>
+                                    <a target="_blank" href="https://wa.me/+447931931966"><i style="margin-right: 12px;" class="fab fa-whatsapp"></i>+44 7931 931966</a>
                                 </div>
                                  
                             </div>
@@ -383,22 +376,24 @@
             <div class="mobile-nav__container"></div>
             <!-- /.mobile-nav__container -->
 
-            <ul class="mobile-nav__contact list-unstyled">
+            <!-- <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
                     <a target="_blank" href="mailto:book@asunasalon.com">book@asunasalon.com</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="#"> +44 7931 931966</a>
+                    <a href="https://wa.me/447931931966"> +44 7931 931966</a>
                 </li>
-            </ul><!-- /.mobile-nav__contact -->
+            </ul> --><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__top">
                 <div class="mobile-nav__social">
-                    <a href="#" class="fab fa-facebook-square"></a>
-                    <a href="#" class="fab fa-tiktok"></a>
-                    <a href="#" class="fab fa-instagram"></a>
-                </div><!-- /.mobile-nav__social -->
+                    <a href="https://wa.me/447931931966" class="fab fa-whatsapp"></a>
+                    <a href="https://www.facebook.com/asunasalon" class="fab fa-facebook"></a>
+                    <a href="https://www.tiktok.com/@saba.asuna" class="fab fa-tiktok"></a>
+                    <a href="https://www.instagram.com/saba.asuna" class="fab fa-instagram"></a>
+                </div>
+                <!-- /.mobile-nav__social -->
             </div><!-- /.mobile-nav__top -->
 
 
