--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                                 <h3 class="services-one__title"><a href="pricing-plans.html">Beauty Treatment</a></h3>
                                 <p class="services-one__text">Enhance your natural beauty with personalized treatments in a calm, home-based environment.</p>
                                 <div class="services-one__btn-box">
-                                    <a href="pricing-plans.html" class="services-one__btn">Book now<i
+                                    <a href="pricing-plans.html#beauty-menu" class="services-one__btn">Book now<i
                                             class="icon-right-arrow"></i></a>
                                 </div>
                             </div>
