--- a/pricing-plans.html
+++ b/pricing-plans.html
@@ -359,7 +359,7 @@
                         <!--Services Two Single Start-->
                         <div class="col-xl-6 col-lg-6">
                             <div class="services-two__single">
-                                <ul class="list-unstyled services-two__list">
+                                <ul id="beauty-menu" class="list-unstyled services-two__list">
                                     <h3 class="services-two__title">Beauty Treatments & Head Spa</h3>
                                     <li>
                                         <div class="services-two__services-name">
@@ -711,6 +711,8 @@
     aria-label="Chat on WhatsApp">
     <img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/whatsapp.svg" alt="WhatsApp" /> 
     </a>
+
+
 
     <script src="assets/vendors/jquery/jquery-3.6.0.min.js"></script>
     <script src="assets/vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
