--- a/beauty-treatments.html
+++ b/beauty-treatments.html
@@ -114,7 +114,7 @@
                                     <a href="hair-styling.html">Our Services</a>
                                 </li>
                                 <li class="">
-                                    <a href="pricing-plans.html">Our Menu</a>
+                                    <a href="pricing-plans.html">Our Price</a>
                                 </li>
                                 <li class="">
                                     <a href="head-spa.html">Head Spa</a>
@@ -178,11 +178,11 @@
                                     <img src="assets/images/My-images/book-now.jpg" alt="">
                                 </div> -->
                                 <div class="services-details-two__help-line-content">
-                                    <a href="https://wa.me/447931931966" target="_blank" class="services-details-two__help-line-icon">
+                                    <!-- <a href="https://wa.me/447931931966" target="_blank" class="services-details-two__help-line-icon">
                                         <img style="width: 50%;" src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/whatsapp.svg" alt="WhatsApp" />
-                                    </a>
-                                    <p class="services-details-two__help-line-sub-title">Book for You</p>
-                                    <h3 class="services-details-two__help-number"><a target="_blank" href="https://wa.me/+447931931966">+44 7931 931966</a></h3>
+                                    </a> -->
+                                    <p class="services-details-two__help-line-sub-title">Book at:</p>
+                                    <h3 class="services-details-two__help-number"><a target="_blank" href="https://wa.me/+447931931966"><i class="fab fa-whatsapp"></i>  44 7931 931966</a></h3>
                                 </div>
                             </div>
                         </div>
@@ -294,16 +294,17 @@
                                         </div>
                                     </div>
 
-                                    <div class="accrodion">
+                                   <div class="accrodion">
                                         <div class="accrodion-title">
-                                            <h4>Can I combine a facial with waxing?</h4>
+                                            <h4>Can I combine a facial with Japanese head massage?</h4>
                                         </div>
                                         <div class="accrodion-content">
                                             <div class="inner">
-                                                <p>Absolutely! We offer combo appointments for maximum convenience. Just let us know during booking and we’ll tailor the session for you.</p>
+                                                <p>Yes, you can! Pairing a facial with a Japanese head massage enhances relaxation while boosting circulation for both skin and scalp. It’s a perfect combination for total rejuvenation.</p>
                                             </div>
                                         </div>
                                     </div>
+
 
                                     
                                 </div>
@@ -312,7 +313,7 @@
                             <div class="row">
                                 <div class="col-xl-10">
                                     <div class="services-two__btn-box">
-                                        <a href="pricing-plans.html" class="thm-btn services-two__btn">Our Pricing</a>
+                                        <a href="pricing-plans.html#beauty-menu" class="thm-btn services-two__btn">Our Pricing</a>
                                     </div>
                                 </div>
                             </div>
