--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,7 @@
                                     <a href="hair-styling.html">Our Services</a>
                                 </li>
                                 <li class="">
-                                    <a href="pricing-plans.html">Our Menu</a>
+                                    <a href="pricing-plans.html">Our Price</a>
                                 </li>
                                 <li class="">
                                     <a href="head-spa.html">Head Spa</a>
