--- a/hair-styling.html
+++ b/hair-styling.html
@@ -127,7 +127,7 @@
                                     <a href="hair-styling.html">Our Services</a>
                                 </li>
                                 <li class="">
-                                    <a href="pricing-plans.html">Our Menu</a>
+                                    <a href="pricing-plans.html">Our Price</a>
                                 </li>
                                 <li class="">
                                     <a href="head-spa.html">Head Spa</a>
@@ -191,11 +191,11 @@
                                     <img src="assets/images/My-images/book-now.jpg" alt="">
                                 </div> -->
                                 <div class="services-details-two__help-line-content">
-                                    <a href="https://wa.me/447931931966" target="_blank" class="services-details-two__help-line-icon">
+                                    <!-- <a href="https://wa.me/447931931966" target="_blank" class="services-details-two__help-line-icon">
                                         <img style="width: 50%;" src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/whatsapp.svg" alt="WhatsApp" />
-                                    </a>
-                                    <p class="services-details-two__help-line-sub-title">Book for You</p>
-                                    <h3 class="services-details-two__help-number"><a target="_blank" href="https://wa.me/+447931931966">+44 7931 931966</a></h3>
+                                    </a> -->
+                                    <p class="services-details-two__help-line-sub-title">Book at:</p>
+                                    <h3 class="services-details-two__help-number"><a target="_blank" href="https://wa.me/+447931931966"><i class="fab fa-whatsapp"></i>  44 7931 931966</a></h3>
                                 </div>
                             </div>
                         </div>
