--- a/head-spa.html
+++ b/head-spa.html
@@ -114,7 +114,7 @@
                                     <a href="hair-styling.html">Our Services</a>
                                 </li>
                                 <li class="">
-                                    <a href="pricing-plans.html">Our Menu</a>
+                                    <a href="pricing-plans.html">Our Price</a>
                                 </li>
                                 <li class="">
                                     <a href="head-spa.html">Head Spa</a>
@@ -173,18 +173,13 @@
                                     </li>
                                 </ul>
                             </div>
-                            <!-- <div class="services-details-two__help-line">
-                                <div class="services-details-two__help-line-img">
-                                    <img src="assets/images/My-images/book.jpg" alt="">
-                                </div>
-                                <div class="services-details-two__help-line-content">
-                                    <div class="services-details-two__help-line-icon">
-                                        <span class="icon-telephone-call"></span>
-                                    </div>
-                                    <p class="services-details-two__help-line-sub-title">Book for You</p>
-                                    <h3 class="services-details-two__help-number"><a target="_blank" href="https://wa.me/+447931931966">+44 7931 931966</a></h3>
-                                </div>
-                            </div> -->
+                            <div class="services-details-two__help-line">
+                                
+                                <!-- <div class="services-details-two__help-line-content">
+                                    <p class="services-details-two__help-line-sub-title">Book at:</p>
+                                    <h3 class="services-details-two__help-number"><a target="_blank" href="https://wa.me/+447931931966"><i class="fab fa-whatsapp"></i>  44 7931 931966</a></h3>
+                                </div> -->
+                            </div>
                         </div>
                     </div>
 
