--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                     <a href="hair-styling.html">Our Services</a>
                                 </li>
                                 <li class="">
-                                    <a href="pricing-plans.html">Our Menu</a>
+                                    <a href="pricing-plans.html">Our Price</a>
                                 </li>
                                 <li class="">
                                     <a href="head-spa.html">Head Spa</a>
@@ -312,10 +312,10 @@
                                         <span class="icon-massage"></span>
                                     </div>
                                 </div>
-                                <h3 class="services-one__title"><a href="pricing-plans.html">Head Spa</a></h3>
+                                <h3 class="services-one__title"><a href="pricing-plans.html#beauty-menu">Head Spa</a></h3>
                                 <p class="services-one__text">Relax and unwind with our rejuvenating head spa treatments, all from the comfort of our peaceful home salon.</p>
                                 <div class="services-one__btn-box">
-                                    <a href="pricing-plans.html" class="services-one__btn">Coming Soon<i
+                                    <a href="pricing-plans.html#beauty-menu" class="services-one__btn">Coming Soon<i
                                             class="icon-right-arrow"></i></a>
                                 </div>
                             </div>
@@ -340,7 +340,7 @@
                                         <span class="icon-lotus"></span>
                                     </div>
                                 </div>
-                                <h3 class="services-one__title"><a href="pricing-plans.html">Beauty Treatment</a></h3>
+                                <h3 class="services-one__title"><a href="pricing-plans.html#beauty-menu">Beauty Treatment</a></h3>
                                 <p class="services-one__text">Enhance your natural beauty with personalized treatments in a calm, home-based environment.</p>
                                 <div class="services-one__btn-box">
                                     <a href="pricing-plans.html#beauty-menu" class="services-one__btn">Book now<i
@@ -622,7 +622,7 @@
                         <div class="item">
                             <div class="testimonial-one__single">
                                 <div class="testimonial-one__icon-quote">
-                                    <img src="assets/images/icon/icon-quote.png" alt="">
+                                    <!-- <img src="assets/images/icon/icon-quote.png" alt=""> -->
                                 </div>
                                 <div class="testimonial-one__single-inner">
                                     <div class="testimonial-one__rating">
@@ -650,7 +650,7 @@
                         <div class="item">
                             <div class="testimonial-one__single">
                                 <div class="testimonial-one__icon-quote">
-                                    <img src="assets/images/icon/icon-quote.png" alt="">
+                                    <!-- <img src="assets/images/icon/icon-quote.png" alt=""> -->
                                 </div>
                                 <div class="testimonial-one__single-inner">
                                     <div class="testimonial-one__rating">
@@ -678,7 +678,7 @@
                         <div class="item">
                             <div class="testimonial-one__single">
                                 <div class="testimonial-one__icon-quote">
-                                    <img src="assets/images/icon/icon-quote.png" alt="">
+                                    <!-- <img src="assets/images/icon/icon-quote.png" alt=""> -->
                                 </div>
                                 <div class="testimonial-one__single-inner">
                                     <div class="testimonial-one__rating">
@@ -721,7 +721,7 @@
                             <div class="instagram__img">
                                 <img src="assets/images/My-images/insta-new-1.svg" alt="">
                                 <div class="instagram__img-icon">
-                                    <a href="#"><span class="fab fa-instagram"></span></a>
+                                    <a target="_blank" href="https://www.instagram.com/saba.asuna"><span class="fab fa-instagram"></span></a>
                                 </div>
                             </div>
                         </div>
@@ -733,7 +733,7 @@
                             <div class="instagram__img">
                                 <img src="assets/images/My-images/insta-new-2.svg" alt="">
                                 <div class="instagram__img-icon">
-                                    <a href="#"><span class="fab fa-instagram"></span></a>
+                                    <a target="_blank" href="https://www.instagram.com/saba.asuna"><span class="fab fa-instagram"></span></a>
                                 </div>
                             </div>
                         </div>
@@ -745,7 +745,7 @@
                             <div class="instagram__img">
                                 <img src="assets/images/My-images/insta-new-3.svg" alt="">
                                 <div class="instagram__img-icon">
-                                    <a href="#"><span class="fab fa-instagram"></span></a>
+                                    <a target="_blank" href="https://www.instagram.com/saba.asuna"><span class="fab fa-instagram"></span></a>
                                 </div>
                             </div>
                         </div>
@@ -757,7 +757,7 @@
                             <div class="instagram__img">
                                 <img src="assets/images/My-images/insta-new-4.svg" alt="">
                                 <div class="instagram__img-icon">
-                                    <a href="#"><span class="fab fa-instagram"></span></a>
+                                    <a target="_blank" href="https://www.instagram.com/saba.asuna"><span class="fab fa-instagram"></span></a>
                                 </div>
                             </div>
                         </div>
@@ -769,7 +769,7 @@
                             <div class="instagram__img">
                                 <img src="assets/images/My-images/insta-new-5.svg" alt="">
                                 <div class="instagram__img-icon">
-                                    <a href="#"><span class="fab fa-instagram"></span></a>
+                                    <a target="_blank" href="https://www.instagram.com/saba.asuna"><span class="fab fa-instagram"></span></a>
                                 </div>
                             </div>
                         </div>
@@ -781,7 +781,7 @@
                             <div class="instagram__img">
                                 <img src="assets/images/My-images/insta-3.webp" alt="">
                                 <div class="instagram__img-icon">
-                                    <a href="#"><span class="fab fa-instagram"></span></a>
+                                    <a target="_blank" href="https://www.instagram.com/saba.asuna"><span class="fab fa-instagram"></span></a>
                                 </div>
                             </div>
                         </div>
