--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@
                         <h3 class="spa-center__title">Our Home-Based Salon is the
                             <br> Essence of Comfort & Care</h3>
                         <div class="spa-center__btn-box">
-                            <a href="https://www.treatwell.co.uk/place/asuna-salon-1/" class="thm-btn spa-center__btn">book now</a>
+                            <a target="_blank" href="https://www.treatwell.co.uk/place/asuna-salon-1/" class="thm-btn spa-center__btn">book now</a>
                         </div>
                     </div>
                 </div>
