--- a/contact.html
+++ b/contact.html
@@ -382,7 +382,7 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="site-footer__bottom-inner">
-                                <p class="site-footer__bottom-text">© Copyright 2025 by <a href="#">Asuna Salon</a></p>
+                                <p class="site-footer__bottom-text">© Copyright 2025 by <a href="#">Asuno Salon</a></p>
                                 <ul class="list-unstyled site-footer__bottom-menu">
                                     <li><a href="contact.html">Help</a></li>
                                 </ul>
