--- a/hair-styling.html
+++ b/hair-styling.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Hair Styling || Asuna Salon </title>
+    <title> Hair Styling || Asuno Salon </title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
@@ -209,7 +209,7 @@
                             <h3 class="services-details-two__title-1">Hair Dressing & Styling</h3>
 
                             <p class="services-details-two__text-1">
-                                At Asuna Salon, we combine expert hairdressing with personalized styling to enhance your natural look. From precision cuts to elegant updos—and even our signature ash and silver color work—each service is tailored to fit your face shape, hair type, and personal style, all in the warm, welcoming space of our home-based salon.
+                                At Asuno Salon, we combine expert hairdressing with personalized styling to enhance your natural look. From precision cuts to elegant updos—and even our signature ash and silver color work—each service is tailored to fit your face shape, hair type, and personal style, all in the warm, welcoming space of our home-based salon.
                             </p>
                             <p class="services-details-two__text-2">
                                 Whether you're looking for a routine refresh, a bold new change, or a flawless color transformation, our goal is to make you feel confident and beautiful. Using high-quality products and restorative treatments like Framesi, we ensure long-lasting results, protect your hair’s health, and keep it strong, vibrant, and full of life.
@@ -397,7 +397,7 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="site-footer__bottom-inner">
-                                <p class="site-footer__bottom-text">© Copyright 2025 by <a href="#">Asuna Salon</a></p>
+                                <p class="site-footer__bottom-text">© Copyright 2025 by <a href="#">Asuno Salon</a></p>
                                 <ul class="list-unstyled site-footer__bottom-menu">
                                     <li><a href="contact.html">Help</a></li>
                                 </ul>
